crates/jarl/tests/integration/snapshots/integration__output_format__output_github-2.snap
---
source: crates/jarl/tests/integration/output_format.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--output-format\").arg(\"github\").arg(\"--with-timing\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
::warning title=Jarl (any_is_na),file=test.R,line=1,col=1::test.R:1:1 [any_is_na] `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
::warning title=Jarl (any_duplicated),file=test2.R,line=1,col=1::test2.R:1:1 [any_duplicated] `any(duplicated(...))` is inefficient. Use `anyDuplicated(...) > 0` instead.

----- stderr -----

----- args -----
check . --output-format github --with-timing
