crates/jarl/tests/integration/snapshots/integration__output_format__with_parsing_error-2.snap
---
source: crates/jarl/tests/integration/output_format.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--output-format\").arg(\"concise\").run().normalize_os_executable_name()"
---

success: false
exit_code: 255
----- stdout -----
test.R [1:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----
Error: Failed to parse test2.R due to syntax errors.

----- args -----
check . --output-format concise
